# gPlat

./: .gitignore  CLAUDE.md  Makefile  create_tag.txt  gPlat.sln
.github/upgrades/scenarios/cppbuildtoolsupgrade_484279/: execution-log.md  plan.md  scenario.json  tasks.md
Doc/: ERROR_CODE.md  s7ioserver.ini
config/: gplat.conf
createb/: createb.vcxproj
createq/: createq.vcxproj
doc/: create tag.md
doc/tasks/: plan2.md
gplat/: gplat.vcxproj  nginx.cxx  ngx_c_slogic.cxx  ngx_c_slogic.h  ngx_c_socket.cxx  ngx_c_socket_request.cxx  ngx_c_threadpool.cxx  ngx_global.h  ngx_log.cxx  ngx_macro.h  ngx_process_cycle.cxx  ngx_string.cxx
higplat/: higplat.cpp  higplat.vcxproj  qbd.h
include/: higplat.h  include.vcxproj  main.cpp  msg.h  qbdtype.h  struct_reflect.h  struct_registry.h  type_code.h  user_types.h
qbdfile/: BOARD  MotorStatusQueue
s7ioserver/: CMakeLists.txt  main.cpp  s7config.cpp  s7config.h  s7ioserver.ini  s7ioserver.vcxproj  s7log.cpp  s7log.h  threadReadPlc.cpp  threadWritePlc.cpp
snap7/: snap7.vcxproj
testapp/: testapp.vcxproj  threadfunction.cpp
testapp2/: main.cpp  testapp2.vcxproj  threadfunction.cpp
testapp3/: function.cpp  main.cpp  testapp3.vcxproj  threadfunction.cpp
testapp4/: main.cpp  threadfunction.cpp
toolgplat/: main.cpp  toolgplat.vcxproj  type_handle.h
